@@ -76,7 +76,7 @@ int JackEngine::Close()
     jack_log("JackEngine::Close");
     fChannel.Close();
     
-    // Close (possibly) remaining clients (RT is stopped)
+    // Close remaining clients (RT is stopped)
     for (int i = 0; i < CLIENT_NUM; i++) {
         JackClientInterface* client = fClientTable[i];
         if (client) {
